<resources>
    <string name="app_name">Car Manager (Fragment)</string>
    <string name="car_list">Car List</string>
    <string name="add_car">Add Car</string>
    <string name="edit_car">Edit Car</string>
    <string name="car_photo">Car Photo</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="information">Information</string>
    <string name="save">Save</string>
    <string name="details">Details</string>

</resources>